[package]
name = "rulesfinder"
version = "0.1.0"
authors = ["Simon Marechal <simon.marechal@synacktiv.com>"]
edition = "2018"

[[bin]]
name = "rulesfinder"
path = "src/main.rs"

[[bin]]
name = "dumper"
path = "src/dumper.rs"

[dependencies]
structopt = "0.3"
crossbeam = "0.7.3"
indicatif = "0.14.0"
lazy_static = "1.4.0"
rand = "0.7.3"
smallvec = { version = "1.8", features = ["union", "const_generics", "const_new"]}
